--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -13,13 +16,13 @@
 </head>
 
 <body>
-    <h1 id="header">Trivia Time!</h1>
-    <div id="displayCont">
-        <span id="timer"></span>
-        <span id="questionDisp"></span><br>
-        <ul id="answerDisp"></ul>
+   <div class="row"> <h1 class="col-md-9 mx-auto text-center" id="header">Trivia Time!</h1></div>
+    <div class="col-md-9 mx-auto" id="displayCont">
+        <div class="row"><div class="col-md-12 text-center" id="timer"></div></div>
+        <div class="row" id="questionDisp"></div>
+        <div class="row mt-2"><ul class="col-md-10 mx-auto mt-2" id="answerDisp"></ul></div>
     </div>
 
 </body>
-
+ 
 </html>
